# hysa-nalde-pool

./: .env_template  .gitignore  README.md  package.json  peiz  scash_vs_bitcoin_differences.md
scash-pool/: BUILD_SUMMARY.md  QUICKSTART.md  README.md  README_NATIVE.md  build-native.sh  package.json
scash-pool/native/: CMakeLists.txt  scash_verify.cpp  test_verify.c
scash-pool/native/randomx/: CMakeLists.txt
scash-pool/src/: index.ts  randomx-native.ts  randomx.ts  scash-rpc.ts  stratum-server.ts  test-native.ts  test-scash-node.ts  types.ts
src/: app.module.ts  main.ts  my-logger.ts
src/job/: bitcoin.rpc.ts  job.generator.ts  job.manager.ts  job.module.ts
src/stratum/: packet.parser.ts  stratum.module.ts  stratum.service.ts  tcp.server.ts
